fix footer text

--- a/views/base/includes/footer.ejs
+++ b/views/base/includes/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
   <div>
-    <div>Copyright (c) 2023 Laura Servettini</div>
+    <div>Copyright © 2023 Laura Servettini</div>
     <div class="d-end">
       <a
         href="https://www.iubenda.com/privacy-policy/54863175"
